--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -101,6 +101,11 @@
                                 <a class="nav-link" :class="{active: activeTab === 'dashboard'}" href="#" @click="setActiveTab('dashboard')">儀表板</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" :class="{active: activeTab === 'login-logs'}" href="#" @click="setActiveTab('login-logs')">
+                                    <i class="fas fa-history me-1"></i>登錄日誌
+                                </a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" :class="{active: activeTab === 'agents'}" href="#" @click="setActiveTab('agents')">代理管理</a>
                             </li>
                             <li class="nav-item">
@@ -501,6 +506,151 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <!-- 登錄日誌頁面 -->
+                <div v-if="activeTab === 'login-logs'">
+                    <div class="d-flex justify-content-between align-items-center mb-4">
+                        <h2>
+                            <i class="fas fa-history me-2 text-primary"></i>登錄日誌
+                        </h2>
+                        <button class="btn btn-primary" @click="loadLoginLogs()">
+                            <i class="fas fa-sync me-1"></i>刷新日誌
+                        </button>
+                    </div>
+
+                    <!-- 時間範圍選擇器 -->
+                    <div class="card mb-4">
+                        <div class="card-header bg-light">
+                            <h5 class="mb-0">
+                                <i class="fas fa-calendar-alt me-2"></i>請選擇起止時間
+                            </h5>
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label class="form-label fw-bold">開始時間</label>
+                                    <input type="date" class="form-control" v-model="loginLogFilters.startDate">
+                                </div>
+                                <div class="col-md-4">
+                                    <label class="form-label fw-bold">結束時間</label>
+                                    <input type="date" class="form-control" v-model="loginLogFilters.endDate">
+                                </div>
+                                <div class="col-md-4">
+                                    <label class="form-label fw-bold">用戶篩選</label>
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" v-model="loginLogFilters.username" placeholder="輸入用戶名搜索">
+                                        <button class="btn btn-outline-primary" @click="searchLoginLogs()">
+                                            <i class="fas fa-search"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col-12">
+                                    <div class="btn-group" role="group">
+                                        <button type="button" class="btn btn-outline-secondary btn-sm" @click="setLoginLogDateRange('today')">今日</button>
+                                        <button type="button" class="btn btn-outline-secondary btn-sm" @click="setLoginLogDateRange('yesterday')">昨日</button>
+                                        <button type="button" class="btn btn-outline-secondary btn-sm" @click="setLoginLogDateRange('week')">本週</button>
+                                        <button type="button" class="btn btn-outline-secondary btn-sm" @click="setLoginLogDateRange('7days')">最近7天</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- 登錄日誌數據表格 -->
+                    <div class="card">
+                        <div class="card-header d-flex justify-content-between align-items-center">
+                            <h5 class="mb-0">
+                                <i class="fas fa-list me-2"></i>登錄記錄
+                            </h5>
+                            <span class="badge bg-secondary">共 {{ loginLogs.length }} 筆記錄</span>
+                        </div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-hover">
+                                    <thead class="table-dark">
+                                        <tr>
+                                            <th style="width: 80px;">NO.</th>
+                                            <th style="width: 150px;">用戶名</th>
+                                            <th style="width: 180px;">登錄時間</th>
+                                            <th style="width: 150px;">IP</th>
+                                            <th>IP歸屬地</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr v-for="(log, index) in paginatedLoginLogs" :key="log.id" class="align-middle">
+                                            <td>
+                                                <span class="badge bg-primary">{{ (loginLogPagination.currentPage - 1) * loginLogPagination.limit + index + 1 }}</span>
+                                            </td>
+                                            <td>
+                                                <div class="d-flex align-items-center">
+                                                    <i class="fas fa-user me-2 text-muted"></i>
+                                                    <strong>{{ log.username }}</strong>
+                                                    <span v-if="log.user_type" class="badge bg-info ms-2 small">{{ formatUserType(log.user_type) }}</span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="d-flex flex-column">
+                                                    <span class="fw-bold">{{ formatLoginDate(log.login_time) }}</span>
+                                                    <small class="text-muted">{{ formatLoginTime(log.login_time) }}</small>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <span class="font-monospace text-info">{{ log.ip_address }}</span>
+                                            </td>
+                                            <td>
+                                                <div class="d-flex align-items-center">
+                                                    <i class="fas fa-map-marker-alt me-2 text-muted"></i>
+                                                    <span :title="log.ip_location">{{ log.ip_location || '未知位置' }}</span>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr v-if="loginLogs.length === 0">
+                                            <td colspan="5" class="text-center text-muted py-4">
+                                                <i class="fas fa-inbox fa-2x mb-2 d-block"></i>
+                                                暫無登錄記錄
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+
+                            <!-- 分頁控制 -->
+                            <div v-if="loginLogPagination.totalPages > 1" class="d-flex justify-content-between align-items-center mt-3">
+                                <div class="text-muted">
+                                    顯示第 {{ (loginLogPagination.currentPage - 1) * loginLogPagination.limit + 1 }} - 
+                                    {{ Math.min(loginLogPagination.currentPage * loginLogPagination.limit, loginLogs.length) }} 筆，
+                                    共 {{ loginLogs.length }} 筆記錄
+                                </div>
+                                <nav aria-label="登錄日誌分頁">
+                                    <ul class="pagination pagination-sm mb-0">
+                                        <li class="page-item" :class="{disabled: loginLogPagination.currentPage === 1}">
+                                            <a class="page-link" href="#" @click.prevent="changeLoginLogPage(loginLogPagination.currentPage - 1)">
+                                                <i class="fas fa-chevron-left"></i>
+                                            </a>
+                                        </li>
+                                        <li v-for="page in getLoginLogPageRange()" :key="page" 
+                                            class="page-item" :class="{active: page === loginLogPagination.currentPage}">
+                                            <a class="page-link" href="#" @click.prevent="changeLoginLogPage(page)">{{ page }}</a>
+                                        </li>
+                                        <li class="page-item" :class="{disabled: loginLogPagination.currentPage === loginLogPagination.totalPages}">
+                                            <a class="page-link" href="#" @click.prevent="changeLoginLogPage(loginLogPagination.currentPage + 1)">
+                                                <i class="fas fa-chevron-right"></i>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- 注意事項 -->
+                    <div class="alert alert-info mt-4" role="alert">
+                        <i class="fas fa-info-circle me-2"></i>
+                        <strong>注意：</strong>登錄日誌最少被保留7天，超過7天部分最多保留最後20筆。
                     </div>
                 </div>
 
