--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -101,9 +101,7 @@
                                 <a class="nav-link" :class="{active: activeTab === 'dashboard'}" href="#" @click="setActiveTab('dashboard')">儀表板</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" :class="{active: activeTab === 'login-logs'}" href="#" @click="setActiveTab('login-logs')">
-                                    <i class="fas fa-history me-1"></i>登錄日誌
-                                </a>
+                                <a class="nav-link" :class="{active: activeTab === 'login-logs'}" href="#" @click="setActiveTab('login-logs')">登錄日誌</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" :class="{active: activeTab === 'agents'}" href="#" @click="setActiveTab('agents')">代理管理</a>
@@ -112,9 +110,7 @@
                                 <a class="nav-link" :class="{active: activeTab === 'members'}" href="#" @click="setActiveTab('members')">会员管理</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" :class="{active: activeTab === 'reports'}" href="#" @click="setActiveTab('reports')">
-                                    <i class="fas fa-chart-bar me-1"></i>报表查询
-                                </a>
+                                <a class="nav-link" :class="{active: activeTab === 'reports'}" href="#" @click="setActiveTab('reports')">報表查詢</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" :class="{active: activeTab === 'transactions'}" href="#" @click="setActiveTab('transactions')">交易记录</a>
@@ -512,9 +508,7 @@
                 <!-- 登錄日誌頁面 -->
                 <div v-if="activeTab === 'login-logs'">
                     <div class="d-flex justify-content-between align-items-center mb-4">
-                        <h2>
-                            <i class="fas fa-history me-2 text-primary"></i>登錄日誌
-                        </h2>
+                        <h2>登錄日誌</h2>
                         <button class="btn btn-primary" @click="loadLoginLogs()">
                             <i class="fas fa-sync me-1"></i>刷新日誌
                         </button>
@@ -523,28 +517,17 @@
                     <!-- 時間範圍選擇器 -->
                     <div class="card mb-4">
                         <div class="card-header bg-light">
-                            <h5 class="mb-0">
-                                <i class="fas fa-calendar-alt me-2"></i>請選擇起止時間
-                            </h5>
+                            <h5 class="mb-0">請選擇起止時間</h5>
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-md-4">
+                                <div class="col-md-6">
                                     <label class="form-label fw-bold">開始時間</label>
                                     <input type="date" class="form-control" v-model="loginLogFilters.startDate">
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-6">
                                     <label class="form-label fw-bold">結束時間</label>
                                     <input type="date" class="form-control" v-model="loginLogFilters.endDate">
-                                </div>
-                                <div class="col-md-4">
-                                    <label class="form-label fw-bold">用戶篩選</label>
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" v-model="loginLogFilters.username" placeholder="輸入用戶名搜索">
-                                        <button class="btn btn-outline-primary" @click="searchLoginLogs()">
-                                            <i class="fas fa-search"></i>
-                                        </button>
-                                    </div>
                                 </div>
                             </div>
                             <div class="row mt-3">
@@ -554,6 +537,7 @@
                                         <button type="button" class="btn btn-outline-secondary btn-sm" @click="setLoginLogDateRange('yesterday')">昨日</button>
                                         <button type="button" class="btn btn-outline-secondary btn-sm" @click="setLoginLogDateRange('week')">本週</button>
                                         <button type="button" class="btn btn-outline-secondary btn-sm" @click="setLoginLogDateRange('7days')">最近7天</button>
+                                        <button type="button" class="btn btn-primary btn-sm" @click="searchLoginLogs()">查詢</button>
                                     </div>
                                 </div>
                             </div>
@@ -563,9 +547,7 @@
                     <!-- 登錄日誌數據表格 -->
                     <div class="card">
                         <div class="card-header d-flex justify-content-between align-items-center">
-                            <h5 class="mb-0">
-                                <i class="fas fa-list me-2"></i>登錄記錄
-                            </h5>
+                            <h5 class="mb-0">登錄記錄</h5>
                             <span class="badge bg-secondary">共 {{ loginLogs.length }} 筆記錄</span>
                         </div>
                         <div class="card-body">
@@ -582,35 +564,14 @@
                                     </thead>
                                     <tbody>
                                         <tr v-for="(log, index) in paginatedLoginLogs" :key="log.id" class="align-middle">
-                                            <td>
-                                                <span class="badge bg-primary">{{ (loginLogPagination.currentPage - 1) * loginLogPagination.limit + index + 1 }}</span>
-                                            </td>
-                                            <td>
-                                                <div class="d-flex align-items-center">
-                                                    <i class="fas fa-user me-2 text-muted"></i>
-                                                    <strong>{{ log.username }}</strong>
-                                                    <span v-if="log.user_type" class="badge bg-info ms-2 small">{{ formatUserType(log.user_type) }}</span>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <div class="d-flex flex-column">
-                                                    <span class="fw-bold">{{ formatLoginDate(log.login_time) }}</span>
-                                                    <small class="text-muted">{{ formatLoginTime(log.login_time) }}</small>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <span class="font-monospace text-info">{{ log.ip_address }}</span>
-                                            </td>
-                                            <td>
-                                                <div class="d-flex align-items-center">
-                                                    <i class="fas fa-map-marker-alt me-2 text-muted"></i>
-                                                    <span :title="log.ip_location">{{ log.ip_location || '未知位置' }}</span>
-                                                </div>
-                                            </td>
+                                            <td>{{ (loginLogPagination.currentPage - 1) * loginLogPagination.limit + index + 1 }}</td>
+                                            <td><strong>{{ log.username || currentUsername }}</strong></td>
+                                            <td>{{ formatLoginDateTime(log.login_time) }}</td>
+                                            <td><span class="font-monospace">{{ log.ip_address }}</span></td>
+                                            <td>{{ log.ip_location || '未知位置' }}</td>
                                         </tr>
                                         <tr v-if="loginLogs.length === 0">
                                             <td colspan="5" class="text-center text-muted py-4">
-                                                <i class="fas fa-inbox fa-2x mb-2 d-block"></i>
                                                 暫無登錄記錄
                                             </td>
                                         </tr>
