--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -553,13 +553,13 @@
                         <div class="card-body">
                             <div class="table-responsive">
                                 <table class="table table-striped table-hover">
-                                    <thead class="table-dark">
+                                    <thead style="background-color: #2c3e50;">
                                         <tr>
-                                            <th style="width: 80px; color: white; font-weight: bold;">NO.</th>
-                                            <th style="width: 150px; color: white; font-weight: bold;">用戶名</th>
-                                            <th style="width: 180px; color: white; font-weight: bold;">登錄時間</th>
-                                            <th style="width: 150px; color: white; font-weight: bold;">IP</th>
-                                            <th style="color: white; font-weight: bold;">IP歸屬地</th>
+                                            <th style="width: 80px; color: white; font-weight: bold; background-color: #2c3e50;">NO.</th>
+                                            <th style="width: 150px; color: white; font-weight: bold; background-color: #2c3e50;">用戶名</th>
+                                            <th style="width: 180px; color: white; font-weight: bold; background-color: #2c3e50;">登錄時間</th>
+                                            <th style="width: 150px; color: white; font-weight: bold; background-color: #2c3e50;">IP</th>
+                                            <th style="color: white; font-weight: bold; background-color: #2c3e50;">IP歸屬地</th>
                                         </tr>
                                     </thead>
                                     <tbody>
